# MuColDev

./: .gitignore  README.md
analysis/: #piEfficiency.py#  .#file01.txt  GenChecker.root  Makefile  RecoPerformance.root  TauDecayAna.root  cmake_install.cmake  effReader.py  genLevelHists.sh  genhists.submit  pdgFile.txt  pdgRates.txt  pdgreader.py  piEff.py  recoHists1k.root  study_photons.py  test.root  theta_calib.py
analysis/AnaProcessors/: CMakeLists.txt  README.md
analysis/AnaProcessors/.github/workflows/: build.yml
analysis/AnaProcessors/AnaProcessors/: AnaDupe.hxx  AnaPFOs.hxx  BranchingProcessor.hxx  CalAna.hxx  EfficiencyProcessor.hxx  GenHistProcessor.hxx  PiAna.hxx  RecoHistProcessor.hxx  RecoPerformance.hxx
analysis/AnaProcessors/share/: after_refit.xml  branching.xml  dupe.xml  genhists.xml  performance.xml  recohists.xml
analysis/AnaProcessors/src/: AnaDupe.cxx  AnaPFOs.cxx  BranchingProcessor.cxx  CalAna.cxx  EfficiencyProcessor.cxx  GenHistProcessor.cxx  PiAna.cxx  RecoHistProcessor.cxx  RecoPerformance.cxx
analysis/log/: output.err.220983-2  output.err.220984-0  output.err.220985-0  output.err.220986-0  output.log.220983  output.log.220984  output.log.220985  output.log.220986  output.log.220987  output.log.220988  output.out.220984-0  output.out.220986-0  output.out.220987-0
analysis/macros/: efficiency_macro.C  plot_dupes.C  plot_efficiency.C  plot_resolution.C  plot_tau_eff.C  plot_trkeff.C
analysis/rootfiles/: ChargedPionFromTaus.root  EFromMu.root  MuSample.root  NeutralPionFromTaus.root  RecoPerformance.root  TauDecay.root  TauRecoAna.root  chargedPionsFromTaus.root  genHists.root  genTaus.root  muGenHists.root  neutronGenHists.root  (+13 more)
reco/: PF_only.xml  Taus.root  reco.sh  reco.submit  reco_steer.xml  steer_reco_Hbb.xml  tauHists.root  track_steer.xml
simulation/: gen.submit  genMus.sh  lcio_particle_gun.py  steer_sim_tauGun.py
(+46 files in other folders)
